fixed hacker shit, fixed images not showing up, still haven't fixed 404 on fontLoader for three.js

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -163,7 +163,7 @@ svg {
   height: 30vw;
   margin-top: 40px;
   border-radius: 10px;
-  opacity: 0%;
+  /* opacity: 0%; */
   box-shadow: 0 1px 1px rgba(69, 206, 240, 0.76);
 }
 
@@ -173,7 +173,7 @@ svg {
 
 @keyframes slideInFromBottom {
   0% {
-    transform: translateY(99%);
+    transform: translateY(120%);
     opacity: 0%;
   }
   100% {
@@ -198,7 +198,8 @@ svg {
 }
 
 .contactH1 {
-  font-weight: 200;
+  font-weight: 500;
+  color: rgb(69, 205, 240);
   text-align: center;
 }
 
